webmonitor/public/stylesheets/TerraMA2WebMonitor.css
/* ... */
.cursor-pointer { cursor: pointer !important; }

.ol-overlaycontainer, .ol-overlaycontainer:hover, .ol-zoom, .ol-zoom:hover, .ol-unselectable, .ol-unselectable:hover, .ol-control, .ol-control:hover { background-color: rgba(0, 0, 0, 0.4) !important; }

#table-div {
  position: absolute;
  background-color: rgba(255,255,255,0.6);
  width: 100%;
  bottom: 0;
  z-index: 99999;
  cursor: default;
}

#table-div > div.main-div {
   margin: 20px;
   padding: 10px 10px 40px 10px;
   background-color: white;
   border-radius: 5px;
   height: calc(100% - 50px);
   overflow: auto;
}

#table-div > .ui-resizable-n {
  top: 0px;
  height: 18px;
  background-image: url('../images/icon-arrow-up-b-128.png');
  background-size: 20px;
  background-repeat: no-repeat;
  background-position-x: center;
  background-position-y: 1px;
}

#table-div > div.main-div > ul.pagination {
   bottom: 30px;
   position: absolute;
   right: 30px;
}

#table-div > div.main-div > select {
  width: 200px;
}

#table-div > div.main-div > span {
  font-size: 18px;
  float: left;
  margin: 4px 15px 0 0;
}

#attributes-table-select > span {
  float: left;
  font-size: 16px;
  font-weight: bold;
  margin: 5px 10px 0 10px;
}

#attributes-table-select > select {
  width: 300px;
  float: left;
}

#layer-toolbox {
  position: relative;
  height: auto;
  float: left;
  width: 300px;
  left: 21px;
  max-height: 90%;
  overflow-y: auto;
}

#legend-box {
  position: absolute;
  width: 320px;
  height: 480px;
  right: 65px;
}

#legend-box, #layer-toolbox {
  background-color: white;
  z-index: 99999;
  border-radius: 5px;
  border: 1px solid;
  top: 21px;
}

#legend-box > .legend-header, #layer-toolbox .layer-toolbox-header{
  padding: 10px;
  color: #000000;
  overflow: hidden;
  border-radius: 5px 5px 0px 0px;
  text-align: center;
  font-size: 18px;
  border-bottom: 1px solid;
  height: 45px;
}

#legend-box > .legend-body, #layer-toolbox .layer-toolbox-body {
  padding: 10px;
  overflow: auto;
  width: 100%;
  top: 0;
  cursor: default;
}

#legend-box > .legend-body {
  margin-top: 45px;
  position: absolute;
  height: calc(100% - 45px);
}

#layer-toolbox .layer-toolbox-body {
  position: relative;
  height: auto;
  padding-bottom: 0;
}

#exportation-status {
  position: absolute;
  width: 100%;
  height: 160px;
  background-color: rgba(255, 255, 255, 0.75);
  margin-left: -10px;
  margin-top: -15px;
}

#exportation-status > div {
  padding: 34px 10px 0 10px;
  text-align: center;
  font-weight: 900;
  font-size: 15px;
}

#exportation-status > div > div {
  margin-top: 7px;
}

#layer-toolbox .layer-toolbox-body .layer-description .box-body {
  text-align: justify;
  max-height: 150px;
  overflow-y: auto;
}

#projects {
  background-color: #1a2226;
  color: #b8c7ce;
  border: none;
  width: 100%;
  height: 40px;
  font-size: 15px;
  margin: 10px 0 0 0;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('../images/arrow-down.png');
  background-size: 17px;
  background-repeat: no-repeat;
  background-position: 204px 12px;
}

#projects::-ms-expand {
  display: none;
}

#institutions-logos {
  text-align: center;
  bottom: 0;
  position: absolute;
  z-index: 999;
  width: 230px;
  border: 2px solid;
  left: 0;
  background-color: #e0e0e0;
  height: 50px;
}

.font-red { color: red; }

.font-green { color: #09d409; }

#authentication-div {
  background-color: #e2e2e2;
  padding: 10px;
  list-style-type: none;
  top: 20px;
  position: absolute;
  z-index: 9999999;
  right: 60px;
  width: 250px;
  border-radius: 5px;
  border: 1px solid #c5c5c5;
}

#about-dialog {
  display: none;
  padding: 0 !important;
}

#programa-cerrado-image {
  background-image: url('../images/about/header.png');
  background-size: 800px;
  background-repeat: no-repeat;
  background-position: initial;
  height: 830px;
  width: 100%;
  padding: 0 !important;
  margin: 0 !important;
  max-width: 100%;
  margin-top: 4px !important;
}

#about-dialog > p {
  margin: 10px;
  text-align: center;
  margin-top: 70px;
}

#about-dialog > p > span {
  font-size: 15px;
  font-weight: bold;
}

#projeto-inpe-image {
  background-image: url('../images/about/inpe.png');
  background-size: 700px;
  background-repeat: no-repeat;
  background-position: center;
  height: 130px;
  width: 100%;
  padding: 0 !important;
  margin: 0 !important;
  max-width: 100%;
  margin-top: 4px !important;
}

#realizacao-image {
  background-image: url('../images/about/realizacao.png');
  background-size: 700px;
  background-repeat: no-repeat;
  background-position: center;
  height: 130px;
  width: 100%;
  padding: 0 !important;
  margin: 0 !important;
  max-width: 100%;
  margin-top: 4px !important;
}

#terrama2-sortlayers i { font-size: 16px; }

#terrama2-sortlayers .glyphicon-resize-full {
  font-size: 15px;
  margin-right: 10px;
}

#loginButton .fa-times {
  position: absolute;
  color: red;
  left: 19px;
  top: 17px;
  font-size: 14px;
}

#loginButton .fa-circle {
  position: absolute;
  color: #0fd00f;
  left: 20px;
  top: 19px;
  font-size: 10px;
}

@-moz-document url-prefix() {
  #custom > span > span > .fa-plus {
    margin-right: 15px;
  }
}

#user-div > p {
  text-align: center;
  font-size: 15px;
  font-weight: 800;
}

#user-div > div > a { padding: 8px; }

#user-div > div > #load-state { margin-left: 2px; }

#layer-toolbox .layer-toolbox-body > .box-default { margin-bottom: 10px !important; }

.mCSB_inside > .mCSB_container { margin-right: 10px !important; }

.mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden { margin-right: 0 !important; }

.sidebar-menu li.header {
  background: #1a2226;
  white-space: normal;
  padding-right: 17px;
}

#terrama2-sortlayers ul li span.layer-name {
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
  overflow: hidden;
  width: 145px;
}

